# expedition_api

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
docker/: Dockerfile  app.yaml  storages.yaml
migrations/: env.py
migrations/versions/: 2026-04-03_all_models.py
src/: all_routers.py  app.py  main.py
src/adapters/database/: config.py  db.py
src/adapters/database/models/: _all_mappers.py  _all_models.py  _model_base.py
src/adapters/handler_dispatcher/: bootstrap.py  messagebus.py
src/adapters/repositories/: async_unit_of_work.py  repository.py
src/common/: role_routers.py  roles.py
src/common/container/: base_container.py  main_container.py  messagebus_container.py  services_container.py  uow_container.py
src/common/domain/: base_models.py
src/common/exceptions/: base_error_handler.py  domain_exceptions.py  error_registry.py  exc_utils.py  global_error_handler.py  other_errors.py
src/common/interfaces/: body.py  commands.py  events.py  handlers.py
src/common/protocols/: repository.py  unitofwork.py
src/common/schemas/: responses.py
src/common/security/: auth_dependencies.py
src/common/utils/: color_message.py
src/conf/: app_config.py  base_config.py  enums.py  logging_config.py  security_conf.py
src/modules/expeditions/domain/: events.py
src/modules/expeditions/infrastructure/: repositories.py  units_of_work.py
src/modules/expeditions/presentation/: dependencies.py
src/modules/users/infrastructure/: password_service.py  repositories.py  token_service.py  units_of_work.py
src/modules/users/presentation/: dependencies.py
src/modules/websocket/: manager.py
src/modules/websocket/presentation/: dependencies.py
tests/: .env.test  __init__.py  config.py  conftest.py
tests/expeditions/e2e/: test_expeditions.py  test_members.py
tests/users/: conftest.py
tests/users/e2e/: test_user_auth.py
tests/websocket/: test_e2e_ws.py  test_ws_manager.py
(+53 files in other folders)
