[project]
name = "expedition-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dependency-injector>=4.49.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "bcrypt>=5.0.0",
    "argon2-cffi>=25.1.0",
    "uvicorn[standard]>=0.43.0",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.2",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx-ws>=0.9.0",
    "itsdangerous>=2.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.8",
    "ty>=0.0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["."]
addopts = ["--import-mode=importlib"]

markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
    "e2e: mark a test as an end-to-end test",
]
filterwarnings = [
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
]
